--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,9 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body{
-  background-image: url('../media/bg.svg');
+  background-image: url('../media/bg1.jpg');
   background-size: cover;
   background-attachment: fixed;
+  margin: auto;
+  text-align: center;
 }
 
 html, button, input, select, textarea,
@@ -51,4 +53,48 @@ html, button, input, select, textarea,
 
 .button-xlarge {
   font-size: 150%;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+}
+
+.horizontal {
+    background-color: #FF5347 !important;
+}
+
+.vertical {
+    background-color: #1F8A70 !important;
+}
+
+h1 {
+    margin: auto;
+    text-align: center;
+    font-size: 50px;
+}
+
+h1, h3 {
+    color: #FFFFFF;
+}
+
+.pure-g {
+    display: inline-block;
+    margin: 10px;
+}
+
+#arrow {
+    display: block;
+}
+
+#game {
+    background-color: #BCBCBC;
+}
+
+input {
+    margin-right: 10px;
+}
+
+tr:nth-child(2n) {
+    background-color: white;
 }
