--- a/app/css/app.less
+++ b/app/css/app.less
@@ -98,3 +98,21 @@ input {
 tr:nth-child(2n) {
     background-color: white;
 }
+
+.dice {
+    width: 50px;
+    height: 50px;
+}
+
+#dice {
+    display: block;
+}
+
+#roll {
+    margin-bottom: 20px;
+}
+
+.frozen {
+    //border: 3px solid #F3B921;
+    opacity: 0.7;
+}
