--- a/app/index.jade
+++ b/app/index.jade
@@ -27,6 +27,14 @@ html(lang='en')
                     input#score(type="text" placeholder="Score")
                     button#add-score.pure-button.pure-button-primary Add Score
 
+    .pure-g#dice
+        button#roll.pure-button.pure-button-primary Roll Dice
+        .pure-u-1
+                img.dice(src='./media/1.png')
+                img.dice(src='./media/2.png')
+                img.dice(src='./media/3.png')
+                img.dice(src='./media/4.png')
+                img.dice(src='./media/5.png')
 
     .pure-g
         .pure-u-1
@@ -50,6 +58,8 @@ html(lang='en')
                         th 13
                         th Total
                 tbody
+
+
 
     .pure-g#arrow
         .pure-u-1
